cloud/jenkins/src/eks-springboot/runpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp3
spec:
  selector:
    matchLabels:
      app: myapp3
  template:
    metadata:
      labels:
        app: myapp3
    spec:
      containers:
        - name: myapp3
          image: 738612635754.dkr.ecr.ap-northeast-2.amazonaws.com/stecr:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: tcp
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myapp3
spec:
  selector:
    app: myapp3
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
